terraform/backend/rds.tf
resource "aws_security_group" "db_sg" {
  name        = "readerwrap-db-sg"
  description = "Allow DB access only from backend subnet"
  vpc_id      = aws_vpc.main.id

}

resource "aws_vpc_security_group_ingress_rule" "allow_my_app_sg" {
  security_group_id            = aws_security_group.db_sg.id
  referenced_security_group_id = aws_security_group.my_app.id

  from_port   = 5432
  to_port     = 5432
  ip_protocol = "tcp"
}

# allows my computer to ssh into the rds instance directly
resource "aws_vpc_security_group_ingress_rule" "ssh_rds" {
  security_group_id = aws_security_group.db_sg.id

  cidr_ipv4   = var.my_public_ip_block
  from_port   = 22
  to_port     = 22
  ip_protocol = "tcp"
}



resource "aws_vpc_security_group_egress_rule" "db_allow_outbound" {
  security_group_id = aws_security_group.db_sg.id

  cidr_ipv4   = "0.0.0.0/0"
  ip_protocol = "-1"
}



resource "aws_db_parameter_group" "db" {
  name   = "reader-wrap"
  family = "postgres17"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "main" {
  identifier             = "reader-wrap"
  instance_class         = "db.t4g.micro"
  allocated_storage      = 5
  engine                 = "postgres"
  engine_version         = "17.6"
  username               = "postgres"
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.db.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
  parameter_group_name   = aws_db_parameter_group.db.name
  publicly_accessible    = false
  skip_final_snapshot    = false
}


output "rds_hostname" {
  description = "RDS instance hostname"
  value       = aws_db_instance.main.address
  sensitive   = true
}

output "rds_port" {
  description = "RDS instance port"
  value       = aws_db_instance.main.port
  sensitive   = true
}

output "rds_username" {
  description = "RDS instance root username"
  value       = aws_db_instance.main.username
  sensitive   = true
}
